fix: repair signal pipeline — correct Z-Score index, real prices from Redis, STOP_LOSS guard, and remove redundant triggered field